# pifacedetection

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  vidcv.cpp
